microservices-k8s/k8s/examples/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    environment: production
